<resources>
    <string name="app_name">Exercicio 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_nome">Nome:</string>
    <string name="label_sobrenome">Sobrenome:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_password">Senha:</string>
    <string name="label_password_confirm">Confirmação da Senha:</string>
    <string name="label_genero">Gênero:</string>
    <string name="label_masculino">Masculino</string>
    <string name="label_feminino">Feminino</string>
    <string name="label_salvar">Salvar</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="hint_sobrenome">Digite o seu sobrenome</string>
    <string name="hint_email">Digite o seu e-mail</string>
    <string name="label_voltar">Voltar</string>
</resources>
