<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">

    <TextView
            android:text="@string/label_nome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNome" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/label_sobrenome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobrenome" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNome" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/label_email"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSobrenome" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/label_genero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvGenero" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/label_voltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btVoltar" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>